--- a/package.json
+++ b/package.json
@@ -102,7 +102,8 @@
   "pnpm": {
     "overrides": {
       "qs": ">=6.14.1",
-      "tar": ">=7.5.4"
+      "tar": ">=7.5.4",
+      "@modelcontextprotocol/sdk": ">=1.25.2"
     }
   }
 }
