--- a/package.json
+++ b/package.json
@@ -104,7 +104,8 @@
       "qs": ">=6.14.1",
       "tar": ">=7.5.4",
       "@modelcontextprotocol/sdk": ">=1.25.2",
-      "lodash": ">=4.17.23"
+      "lodash": ">=4.17.23",
+      "diff": ">=8.0.3"
     }
   }
 }
